syntax="proto3";

package userspb;
option go_package = "./userspb";

import "google/api/annotations.proto";

message EmptyData {}

message PingMessage {
  string greeting = 1;
}

message User {
  int64 id=1;
  string username=2;
  int64 created=3;
}

enum Gender {
  NOT_SPECIFIED=0;
  MALE=1;
  FEMALE=2;
  OTHER=3;
}

message Profile {
  int64 userId=1;
  string displayName=2;
  string dateOfBirth=3;
  Gender gender=4;
  int64 followers=6;
  int64 following=7;
}

message CreateUserRequest {
	string username=1;
	string password=2;
}

message CreateUserResponse {
  User user=1;
}

message GetUsersResponse {
	repeated User users=1;
}

message GetUserRequest {
	string username=1;
}

message GetUserByIDRequest {
	int64 id=1;
}

message GetUserResponse {
  User user=1;
}

message AuthenticateRequest {
	string username=1;
	string password=2;
}

message AuthenticateResponse {
	bool Auth=1;
  User user=2;
}

message SetProfileRequest {
  Profile profile=1;
}

message GetProfileRequest {
  string username=1;
}

message GetProfileResponse {
  Profile Profile=1;
  User user=2;
  bool following=3;
}

message FollowUserRequest {
  string username=1;
}

message GetUserFollowingRequest {
  int64 userid=1;
}

message GetUserFollowingResponse {
 	repeated int64 users=1;
}

service UsersService {
  rpc SayHello(PingMessage) returns (PingMessage) {
    option (google.api.http) = {
      post: "/users/ping"
      body: "*"
    };
  }
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
     option (google.api.http) = {
       post: "/users"
       body: "*"
     };
  };
	rpc GetUsers(EmptyData) returns (GetUsersResponse) {
     option (google.api.http) = {
       get: "/users"
     };
  };
  rpc GetProfile(EmptyData) returns (GetProfileResponse) {
     option (google.api.http) = {
       get: "/users/self/profile"
     };
  }
	rpc GetUser(GetUserRequest) returns (GetUserResponse) {
     option (google.api.http) = {
       get: "/users/{username=*}"
     };
  };
	rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {
     option (google.api.http) = {
       post: "/users/auth"
       body: "*"
     };
  };
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserResponse) {
     option (google.api.http) = {
       get: "/users/id/{id=*}"
     };
  }
  rpc SetProfile(SetProfileRequest) returns (GetProfileResponse) {
     option (google.api.http) = {
       post: "/users/profile"
       body: "*"
     };
  }
  rpc GetUserProfile(GetProfileRequest) returns (GetProfileResponse) {
     option (google.api.http) = {
       get: "/users/profile/{username=*}"
     };
  }
  rpc FollowUser(FollowUserRequest) returns (EmptyData) {
     option (google.api.http) = {
       post: "/users/follow/{username=*}"
     };
  }
  rpc UnFollowUser(FollowUserRequest) returns (EmptyData) {
     option (google.api.http) = {
       post: "/users/unfollow/{username=*}"
     };
  }
  rpc GetUserFollowing(GetUserFollowingRequest) returns (GetUserFollowingResponse) {
     option (google.api.http) = {
       post: "/users/following/{userid=*}"
     };
  }
}
